[package]
name = "reddit-search"
version = "0.7.5"
edition = "2021"
authors = ["Luc Aggett <luc@aggett.com>"]
description = "A search tool for the pushshift.io Reddit dumps."
license = "MIT"
repository = "https://github.com/lucaggett/reddit-search"
categories = ["command-line-utilities"]

[dependencies]
zstd = "0.13.0"
clap = "4.4.8"
indicatif = "0.17.7"
rayon = "1.8.0"
num_cpus = "1.16.0"
chrono = "0.4.31"


[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
