[package]
name = "reddit-search"
version = "0.9.1"
edition = "2021"
authors = ["Luc Aggett <luc@aggett.com>"]
description = "A search tool for the pushshift.io Reddit dumps."
license = "MIT"
repository = "https://github.com/lucaggett/reddit-search"
categories = ["command-line-utilities"]

[dependencies]
zstd = "0.13.1"
clap = "4.5.4"
indicatif = "0.17.8"
rayon = "1.10.0"
num_cpus = "1.16.0"
chrono = "0.4.38"
assert_cmd = "2.0.14"


[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
